--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,3 +33,33 @@ body {
     color: #cccccc; /* Light color for placeholder text */
   }
   
+
+  .post-content p{
+    margin-bottom: 0.5rem
+  }
+
+  .post-content h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
+  }
+  
+  .post-content h2 {
+    font-size: 1.4rem;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
+  }
+  
+  .post-content a {
+    color: rgb(73, 149, 199);
+    text-decoration: none;
+  }
+  
+  .post-content a:hover {
+    text-decoration: underline;
+  }
+  
+  .dark .post-content a {
+    color: red;
+  }
